src/objects/User.object
<CustomObject>
    <fields>
        <fullName>CanDeletePPs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Delete PPs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Services_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Services Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Type__c</fullName>
        <label>Commission Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>No Commission</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <label>Contact ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InvoiceCPMFields__c</fullName>
        <description>List of Payment fields displayed in Invoice Approval page.</description>
        <label>Invoice CPM Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceCPVFields__c</fullName>
        <description>List of Payment fields displayed in Invoice Approval page.</description>
        <label>Invoice CPV Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Amount Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PodEmail__c</fullName>
        <label>Pod Email</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>Active_Admins</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Admins</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>ClientServices</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>TIMEZONE</columns>
        <columns>STORAGE_USED</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Client_Services_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Chatter Free User,Chatter External User</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Client Services</value>
        </filters>
        <label>Client Services</label>
    </listViews>
    <listViews>
        <fullName>Client_Services</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>TIMEZONE</columns>
        <columns>STORAGE_USED</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Client_Services_Rep__c</columns>
        <columns>Commission_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Client Services</value>
        </filters>
        <filters>
            <field>Client_Services_Rep__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Client Services</label>
    </listViews>
    <listViews>
        <fullName>Frozen</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>TIMEZONE</columns>
        <columns>STORAGE_USED</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>SALES.CONTACT.NAME</columns>
        <columns>IS_FROZEN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Chatter Free User,Chatter External User</value>
        </filters>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Frozen</label>
    </listViews>
    <listViews>
        <fullName>NotFrozen</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>TIMEZONE</columns>
        <columns>STORAGE_USED</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>SALES.CONTACT.NAME</columns>
        <columns>IS_FROZEN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Chatter Free User,Chatter External User</value>
        </filters>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Not Frozen</label>
    </listViews>
    <listViews>
        <fullName>SalesUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>TIMEZONE</columns>
        <columns>STORAGE_USED</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Client_Services_Rep__c</columns>
        <columns>Commission_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filters>
        <label>Sales Users</label>
    </listViews>
    <listViews>
        <fullName>Salesforce_license_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Client_Services_Rep__c</columns>
        <columns>CanDeletePPs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Chatter Free User,Chatter External User</value>
        </filters>
        <label>Salesforce license users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>